tests/deploy_errors/connector_no_kind/connector_not_found/error.txt
Error: 
    1 | create instance broken from snot::badger
      |                             ^^^^^^^^^^^^ Artefact used in `from` is not defined or not found: snot::badger